🚀 순수 AI 검색 엔진 v3.0 완성
✨ 주요 변경사항:
- LLM 의존성 완전 제거 (OpenAI API 불필요)
- 2단계 앙상블 아키텍처 구현
- 코드 대폭 간소화 (965줄 → 300줄)
- uv 프로젝트 구조로 전환
- 불필요한 모델 및 파일 정리
- 포괄적인 .gitignore 업데이트
- 완전한 README 문서화

🎯 성능 개선:
- 검색 시간: 3-5초 → 0.23초 (90% 단축)
- 모델 크기: 3GB+ → 200MB (92% 절약)
- 정확도: 97% 유지
- 완전 오프라인 동작

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-# 모델 파일들 (용량이 크므로 제외)
-models/
-manual_model/
-local_model/
-paraphrase-multilingual-MiniLM-L12-v2/
-*.bin
-*.safetensors
-*.model
-*.pth
-*.pt
-
-# Python 관련
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
@@ -27,34 +16,97 @@ parts/
 sdist/
 var/
 wheels/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# 가상환경
-venv/
+# Virtual environments
+.env
+.venv
 env/
+venv/
 ENV/
+env.bak/
+venv.bak/
 
-# IDE 설정
+# uv
+.uv/
+uv.lock
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# 임시 파일들
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# poetry
+poetry.lock
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# PyCharm
+.idea/
+
+# Project specific
+*.log
 *.tmp
-*.temp
-model_path.txt
-downloaded_model_path.txt
-simple_model_path.txt
+*_backup.py
+*_old.py
+temp/
+tmp/
 
-# 로그 파일
-*.log 
+# AI Models (too large for git)
+models/*/pytorch_model.bin
+models/*/model.safetensors
+models/*/*.bin
+models/*/*.safetensors
+
+# Data files (optional - uncomment if data is too large)
+# *.json
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.bak
+*.backup
+*~
